# chess_db

./: .gitignore  database.ini  docker-compose.yml  export.csv  main.py  setup.cfg
chess_csv_exporter/: chess_csv_exporter.py
chess_game_exporter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chess_move_importer/: __init__.py  chess_move_importer.py
doc/: ER-Diagram.drawio
tests/: test_chess_csv_exporter.py  test_chess_move_importer.py
