[metadata]
name = chess_game_exporter 
author = Michael Glössl
author_email = mgloessl04@gmail.com
description = import chess moves from postgresql db
version = 1.0.0
url = https://github.com


license_file =
  LICENSE.txt

[options]
python_requires >= 3.8
packages = find:
zip_safe = False
install_requires =
	pandas
    psycopg2

[options.extras_require]
dev = 
  autopep8
  black
  flake8
  flake8-builtins
#  flake8-eradicate
  flake8-isort
  flake8-spellcheck
  flake8-variables-names
  pytest
  rope

[flake8]
max-line-length=99
exclude = venv
docstring-convention = numpy

[isort]
profile = black

[tool:pytest]
testpaths = tests
log_level = info